keycloak/ingress-nginx.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-production
    acme.cert-manager.io/http01-edit-in-place: "true"
  name: keycloak
  namespace: keycloak
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - oidc.c4-soft.com
      secretName: keycloak-tls
  rules:
  - host: oidc.c4-soft.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak-keycloakx-http
            port:
              number: 80
